--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Food Network</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="half-width introduction">
+        <h1>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</h1>
+        <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+        <button><a href="https://www.foodpanda.sg/?gclid=Cj0KCQjw24qHBhCnARIsAPbdtlJvMTKohQDky2V6ElM2__IH4SHEcnwnyctg5sYZKLQ_ixt9pfAy9uAaAslAEALw_wcB" target="_blank">Order Food</a></button>
+        </div>
+        <div class="half-width">
+           <img src="images/female/Group 8425.png" alt=""> 
+        </div>
+
+    </section>
     
 </body>
 </html>
