--- a/index.html
+++ b/index.html
@@ -11,15 +11,73 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="flexible-class">
         <div class="half-width introduction">
-        <h1>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</h1>
+        <h1><b>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</b></h1>
         <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
         <button><a href="https://www.foodpanda.sg/?gclid=Cj0KCQjw24qHBhCnARIsAPbdtlJvMTKohQDky2V6ElM2__IH4SHEcnwnyctg5sYZKLQ_ixt9pfAy9uAaAslAEALw_wcB" target="_blank">Order Food</a></button>
         </div>
         <div class="half-width">
-           <img src="images/female/Group 8425.png" alt=""> 
+           <img class="group" src="images/female/Group 8425.png" alt=""> 
         </div>
+
+    </section>
+    <section class="second flexible-class">
+        <div class="half-width">
+            <img class="person" src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width about">
+            <h2>About Me</h2>
+            <p>I am an experienced nutrition practitioner with 9 years of private clinical practice providing individualised advice to my clients. I am registered with the Complementary and Natural Healthcare Council (CNHC), which is an accredited nutrition register regulated by the Professional Standards Authority of the United Kingdom.</p>
+            <button><a href="https://www.linkedin.com/in/farhana-binta-shaheed-964b7b19b/" target="_blank">Contact Me</a></button>
+
+        </div>
+    </section>
+    <section>
+        <div class="recipies">
+            <h2>My recipies</h2>
+            <p>List points that you'd like to cover in your introduction. Perhaps a brief history of the subject, your personal relationship to the subject, and your favorite tips for success, etc. Ingredients and Equipment Guide – Most cookbook authors include this in a cookbook, but it's not necessary.</p>
+        </div>
+        <div class="flexible-class">
+            <div class="menu">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Cake & Cookies</h3>
+                <p>A cookie is a baked or cooked food that is typically small, flat and sweet. It usually contains flour, sugar, egg, and some type of oil, fat, or butter. It may include other ingredients such as raisins, oats, chocolate chips, nuts, etc.</p>
+            </div>
+            <div class="menu">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Beef Raamen</h3>
+                <p>This is an upgrade, but not by much. It's not so much “beef” flavor as it is “dark salt.” The broth thinly coats the noodle with a vaguely savory brine that acts more like a setup for some egg or soy sauce than its own flavor. If you keep it dense and sip the soup, you get a little hazy beef flavor.</p>
+            </div>
+            <div class="menu">
+                <img src="images/food/Project Cover3.png" alt="">
+                <h3>Mango Mousse</h3>
+                <p>Sweet mousses are typically made with whipped egg whites, whipped cream, or both, and flavored with one or more of chocolate, coffee, caramel, puréed fruits, or various herbs and spices, such as mint or vanilla.</p>
+            </div>
+
+        </div>
+        <section class="forth">
+            <div class="flexible-class">
+                <div class="follower"> 
+                    <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+                </div>
+                <div class="follower"> 
+                    <i class="fa fa-youtube-play" style="font-size:36px"></i>
+                    <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+                </div>
+                <div class="follower">
+                    <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="footer">
+        <h4><span>FOOD</span> NETWORK</h4> 
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        <p class="copyright">© GROUP TITLE 2015</p>
 
     </section>
     
