extra code added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <ul>
+            <li>Home</li>
+            <li>News</li>
+            <li>Location</li>
+            <li>Career</li>
+          </ul>
+    </section>
     <section class="flexible-class">
         <div class="half-width introduction">
         <h1><b>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</b></h1>
@@ -63,7 +71,6 @@
                 <p>Youtube Subscribers</p>
                 </div>
                 <div class="follower"> 
-                    <i class="fa fa-youtube-play" style="font-size:36px"></i>
                     <h1>2.4m</h1>
                 <p>Instagram Followers</p>
                 </div>
