final code added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <li>Career</li>
           </ul>
     </section>
-    <section class="flexible-class">
+    <section class="flexible-class title">
         <div class="half-width introduction">
-        <h1><b>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</b></h1>
+        <h1>Skip The Diet,Just Eat <span>Healthy</span> With Food Network</h1>
         <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
         <button><a href="https://www.foodpanda.sg/?gclid=Cj0KCQjw24qHBhCnARIsAPbdtlJvMTKohQDky2V6ElM2__IH4SHEcnwnyctg5sYZKLQ_ixt9pfAy9uAaAslAEALw_wcB" target="_blank">Order Food</a></button>
         </div>
@@ -43,10 +43,10 @@
     </section>
     <section>
         <div class="recipies">
-            <h2>My recipies</h2>
+            <h2>My Recipies</h2>
             <p>List points that you'd like to cover in your introduction. Perhaps a brief history of the subject, your personal relationship to the subject, and your favorite tips for success, etc. Ingredients and Equipment Guide – Most cookbook authors include this in a cookbook, but it's not necessary.</p>
         </div>
-        <div class="flexible-class">
+        <div class="recipies-card">
             <div class="menu">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h3>Cake & Cookies</h3>
@@ -65,7 +65,7 @@
 
         </div>
         <section class="forth">
-            <div class="flexible-class">
+            <div class="forth-one">
                 <div class="follower"> 
                     <h1>700k</h1>
                 <p>Youtube Subscribers</p>
